collapsable side menu and navi ui issue done

--- a/src/app/pages/specifications/specifications-menu/specifications-menu.component.scss
+++ b/src/app/pages/specifications/specifications-menu/specifications-menu.component.scss
@@ -10,7 +10,7 @@
 
 .hide-spec-menu {
     height: 100vh;
-    width: 100px;
+    width: 70px;
     background: #24232C;
     padding: 20px;
     height: calc(100vh - 40px);
