--- a/src/app/pages/specifications/specifications.component.scss
+++ b/src/app/pages/specifications/specifications.component.scss
@@ -3,13 +3,13 @@
 }
 
 .spec-content {
-    width: calc(100vw - 180px);
+    width: calc(100vw - 150px);
 }
 
 .spec-content-navi {
-    width: calc(100vw - 640px);
+    width: calc(100vw - 610px);
 }
 
 .spec-content-sideMenu-navi {
-    width: calc(100vw - 910px);
+    width: calc(100vw - 880px);
 }
